k3s/prometheus/Ingress.yaml
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "harbor-release-harbor-ingress-notary"
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: harbor-release-harbor-ingress
    hosts:
    - notary.harbor.domain
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: harbor-release-harbor-notary-server
            port:
              number: 4443
    host: notary.harbor.domain
